# pdftools-validateconvert

./: CMakeLists.txt  README.md  README_C.md  pdftoolsvalidateconvert.c  pdftoolsvalidateconvert.vcxproj  pdftoolsvalidateconvert.vcxproj.filters
include/: PdfTools_PdfTools.h  PdfTools_PdfToolsDocumentAssembly.h  PdfTools_PdfToolsPdfAConversion.h  PdfTools_Types.h
lib/win-x64/: PdfToolsSdk.lib
lib/win-x86/: PdfToolsSdk.lib
